# lg-gcover

./: .env.test  .gitignore  .pre-commit-config.yaml  COMPUTED_FIELDS.md  DATA_WORKFLOW.md  MANIFEST.in  MAPFILE.md  MAPFILES.md  Makefile  README.md  build_gcover.py  gcover.spec  hook-dateparser.py  hook-duckdb.py  hook-gcover.py  hook-osgeo.py  pyproject.toml  rthook_gdal.py  rthook_symlinks.py  setup.py
.github/workflows/: build-windows.yml  build.yaml  release.yaml  test_geone.yaml
conda-recipe/: meta.yaml
config/: bulk_export_example.yaml  config.yaml.sample  development.yaml  esri_classifier_denormalized_geocover.kogis.yaml  esri_classifier_denormalized_geocover.yaml  gcover_config.yaml  gdb_config.yaml  merged_final_schema.json  patterns_catalog.yaml  production.yaml
config/environments/: development.yaml  development.yaml.py  production.yaml  production.yaml.py  test.yaml
scripts/: apply_style.sh  backup_metada.sh  check_classification_coverage.py  check_domain_compliance.py  check_geometry_coverage.py  check_line_topology.py  check_pipeline_counts.py  conda_test.ps1  create_administrative_zones.py  create_administratives.ps1  datamodel.ps1  debug_import_order.py  deduplicate_uuid.py  denormalize_geocover.py  diff_xlsx.py  esri_classification_applicator.py  export_as_lyrx.py  export_test_data.py  extract_legends.py  format_geojson.py  hexagonal_grid.py  increment_map.py  inject_strati_link.py  latest_rc_qa_example.py  mapserver_qgis_generator.py  patch_zweisimmen_tecto.py  run_aggregate.ps1  setup-arcgis-env.cmd  setup_environments.py  surfaces_assign_aspect.py  surfaces_auxilliary_points.py  task_scheduler.ps1  test_arcpy.py  test_unified_config.py  translate_gpkg.py  upload_gdb.ps1  upload_qa.ps1  validate_merge.py  verify_uploads.py  zip_all_xlsx.ps1
src/gcover/: __init__.py  arcpy_compat.py  config.py
src/gcover/bridge/: sde.py
src/gcover/cli/: __init__.py  gcover_info.py  gdb_cmd.py  geometry_cmd.py  main.py  publish_cmd.py  publish_helper.py  publish_helpers.py  qa_cmd.py  schema_cmd.py  sde_cmd.py  symbols_cli.py
src/gcover/config/: __init__.py  core.py  exceptions.py  gdb.py  loader.py  models.py  qa.py  registry.py.delete  schema.py  sde.py.delete
src/gcover/core/: __init__.py  config.py  geometry.py
src/gcover/data/: GC_Sources_PA.xlsx  administrative_zones.README  basic_symbols.map  lots.geojson  mapsheets.geojson
src/gcover/gdb/: __init__.py  assets.py  config.py  enhanced_qa_stats.py  manager.py  qa_converter.py  storage.py  utils.py
src/gcover/geometry/: __init__.py  utils.py
src/gcover/publish/: __init__.py  arcpy_symbol_updater.py  cli_arcpy_integration.py  complex_polygon_generators.py  console_generator.py  diff_tools.py  esri_classification_applicator.py  esri_classification_extractor.py  generator.py  label_extractor_extension.py  manual_mapfile_handler.py  merge_sources.py  merge_sources_arcpy.py  merge_sources_v2.py  patch_schema.py  qgis_generator.py  rotation_extractor_extension.py  style_config.py  symbol_models.py  symbol_utils.py  tooltips_enricher.py  utils.py  vectorized_classification.py  writeback.py
src/gcover/qa/: __init__.py  analyzer.py  lines_in_unco.py  styles.py
src/gcover/schema/: __init__.py  differ.py  extractor.py  filegdb_parser.py  metadata.py  models.py  reporter.py  serializer.py  simple_transformer.py  transformer.py  utils.py
src/gcover/schema/exporters/: json.py  plantuml.py
src/gcover/schema/templates/: schema_diff_full.html.j2  schema_diff_full.markdown.j2  schema_diff_summary.html.j2  schema_diff_summary.markdown.j2
src/gcover/sde/: __init__.py  bridge.py  config.py  connection.py  connection_manager.py  exceptions.py  feature_class_explorer.py  usage_example.py
src/gcover/utils/: __init__.py  console.py  decorators.py  gpkg.py  imports.py  logging.py
tests/: conftest.py  test_class_identifier.py  test_cli_smoke.py  test_computed_fields.py  test_dependencies.py  test_domain_compliance.py  test_gdb_integration.py  test_imports.py  test_mapserver_data.py  test_merge_sources.py  test_parse_since.py  test_realistic_smoke.py  test_staging_workflow.py  test_symbols.py  test_translate_gpkg.py
tests/data/styles/: Linear_Objects.lyrx  Point_Objects.lyrx  Surfaces.lyrx
